; ModuleID = '/home/carl/AnghaBench/qmk_firmware/tmk_core/protocol/pjrc/extr_usb_extra.c_usb_extra_send.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/tmk_core/protocol/pjrc/extr_usb_extra.c_usb_extra_send.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SREG = common dso_local global i64 0, align 8
@EXTRA_ENDPOINT = common dso_local global i32 0, align 4
@UENUM = common dso_local global i32 0, align 4
@UDFNUML = common dso_local global i64 0, align 8
@UEINTX = common dso_local global i32 0, align 4
@RWAL = common dso_local global i32 0, align 4
@UEDATX = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @usb_extra_send(i64 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  store i64 %0, i64* %4, align 8
  store i32 %1, i32* %5, align 4
  %8 = call i32 (...) @usb_configured()
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %11, label %10

10:                                               ; preds = %2
  store i32 -1, i32* %3, align 4
  br label %47

11:                                               ; preds = %2
  %12 = load i64, i64* @SREG, align 8
  store i64 %12, i64* %6, align 8
  %13 = call i32 (...) @cli()
  %14 = load i32, i32* @EXTRA_ENDPOINT, align 4
  store i32 %14, i32* @UENUM, align 4
  %15 = load i64, i64* @UDFNUML, align 8
  %16 = add nsw i64 %15, 50
  store i64 %16, i64* %7, align 8
  br label %17

17:                                               ; preds = %11, %34
  %18 = load i32, i32* @UEINTX, align 4
  %19 = load i32, i32* @RWAL, align 4
  %20 = shl i32 1, %19
  %21 = and i32 %18, %20
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %23, label %24

23:                                               ; preds = %17
  br label %38

24:                                               ; preds = %17
  %25 = load i64, i64* %6, align 8
  store i64 %25, i64* @SREG, align 8
  %26 = call i32 (...) @usb_configured()
  %27 = icmp ne i32 %26, 0
  br i1 %27, label %29, label %28

28:                                               ; preds = %24
  store i32 -1, i32* %3, align 4
  br label %47

29:                                               ; preds = %24
  %30 = load i64, i64* @UDFNUML, align 8
  %31 = load i64, i64* %7, align 8
  %32 = icmp eq i64 %30, %31
  br i1 %32, label %33, label %34

33:                                               ; preds = %29
  store i32 -1, i32* %3, align 4
  br label %47

34:                                               ; preds = %29
  %35 = load i64, i64* @SREG, align 8
  store i64 %35, i64* %6, align 8
  %36 = call i32 (...) @cli()
  %37 = load i32, i32* @EXTRA_ENDPOINT, align 4
  store i32 %37, i32* @UENUM, align 4
  br label %17

38:                                               ; preds = %23
  %39 = load i64, i64* %4, align 8
  %40 = trunc i64 %39 to i32
  store i32 %40, i32* @UEDATX, align 4
  %41 = load i32, i32* %5, align 4
  %42 = and i32 %41, 255
  store i32 %42, i32* @UEDATX, align 4
  %43 = load i32, i32* %5, align 4
  %44 = ashr i32 %43, 8
  %45 = and i32 %44, 255
  store i32 %45, i32* @UEDATX, align 4
  store i32 58, i32* @UEINTX, align 4
  %46 = load i64, i64* %6, align 8
  store i64 %46, i64* @SREG, align 8
  store i32 0, i32* %3, align 4
  br label %47

47:                                               ; preds = %38, %33, %28, %10
  %48 = load i32, i32* %3, align 4
  ret i32 %48
}

declare dso_local i32 @usb_configured(...) #1

declare dso_local i32 @cli(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
